Fixes to colour swatch application, general spacing.

--- a/less/fork-madam.less
+++ b/less/fork-madam.less
@@ -120,10 +120,10 @@ a {
     margin-bottom: -8px;
 }
 
-.feature__button, 
-button, 
+.feature__button,
+button,
 .button,
-.blogpostlist__read-more { 
+.blogpostlist__read-more {
     border-bottom: 5px solid @color__feature-button--background;
     padding: 0;
     background-color: transparent;
@@ -149,13 +149,16 @@ button,
 // -------------------------------------------
 
 .homepage-signup {
-    background-color: @color-swatch3;
-    padding-bottom: 1px;
+    background-color: darken(@color__body--background, 8%);
+    padding: 15px 20px;
     form, .form {
         background-color: transparent;
     }
-    .widget__signupform {
-        padding: 0px 10% 12px;
+    .signupform__form {
+        margin: 0;
+    }
+    .signupform__form-body {
+        margin: 0 auto;
     }
     .signupform__button {
         background-color: @color-swatch4;
@@ -171,7 +174,7 @@ button,
         }
     }
     .signupform__label {
-        color: @color__feature-button--text;
+        color: @color__p--text;
     }
     .message-box {
         text-align: center;
@@ -210,6 +213,15 @@ button,
     @media @mobile {
         text-align: center;
     }
+    [data-widget-type="profile"] {
+        a,
+        p,
+        .description,
+        .headline,
+        .strapline {
+            color: @color__navigation--text;
+        }
+    }
     .socialicons__social-list {
         text-align: right;
         @media @tablet {
@@ -226,20 +238,21 @@ button,
     .social-social-link {
         color: @color-swatch4;
     }
+    .signupform__form {
+        background-color: transparent;
+        margin: 0 auto;
+    }
     .signupform__input {
-        background-color: #f7f7f7!important;
+        background-color: darken(@color__body--background, 8%);
     }
     .signupform__button {
-        background-color: @color-swatch4!important;
+        background-color: @color__button--background!important;
         color: white;
         padding: 8px 10px;
         border: 0;
         &:hover {
-            background-color: lighten(@color-swatch4, 10%);
+            background-color: lighten(@color__button--background, 10%);
         }
-    }
-    form, .form {
-        margin: 0px auto 0;
     }
 }
 
@@ -255,8 +268,8 @@ button,
 // #WIDGETS
 // -------------------------------------------
 
-.signupform__label, 
-.contactform__legend, 
+.signupform__label,
+.contactform__legend,
 .blogsearch__legend {
     font-family: @font__h2--font-family;
     font-size: @font__h2--font-size;
@@ -324,6 +337,7 @@ form:before, .form:before {
 // -------------------------------------------
 
 .template-footer {
+    background-color: darken(@color__body--background, 8%);
     .signupform__button {
         padding: 8px 10px;
         background-color: @color-swatch4!important;
@@ -333,8 +347,14 @@ form:before, .form:before {
             background-color: lighten(@color-swatch4, 10%);
         }
     }
-    p, a, span {
-        font-family: @font__button--font-family;
+    [data-widget-type="profile"] {
+        a,
+        p,
+        .description,
+        .headline,
+        .strapline {
+            color: @color__navigation--text;
+        }
     }
     .signupform__fieldset {
         padding: 10px 10px 10px 0;
@@ -352,6 +372,7 @@ form:before, .form:before {
 .template-footer .signupform__form-group:nth-child(1) {
     padding-top: 10px;
 }
+
 
 
 // #BLOG
@@ -378,7 +399,7 @@ form:before, .form:before {
 }
 
 .responsivecolumns {
-    .columns-four-first, 
+    .columns-four-first,
     .columns-four-second,
     .columns-four-third,
     .columns-four-fourth {
