--- a/less/theme.less
+++ b/less/theme.less
@@ -58,7 +58,7 @@
     text-align: center;
     padding-top: 40px;
     z-index: 9998;
-    min-height: 28%; 
+    min-height: 28%;
 }
 
 .fixed-header-wrap {
@@ -218,9 +218,9 @@ blockquote:before {
 // ----------
 
 form, .form {
-    background-color: @color-swatch7;
+    background-color: transparent;
     position: relative;
-    border: 1px solid darken(@color-swatch1,10%);
+    border: 1px solid darken(@color__body--background, 8%);
     width: 100%;
     margin: 20px auto 0;
     &:before {
